--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -50,13 +50,13 @@ Semester term: Fall 2024
 | Apr 20  | **Final Project Presentations** |  | [Final paper due](https://docs.google.com/document/d/1qe6uiXbJRvUv1WxvN_YH1PHN7yPMu5hcos9N6x7s_cc/edit?usp=sharing) |
 
 
-<br/>
+[comment]: <br/>
 
-This course will provide an introduction to various techniques in natural language processing with a focus on practical use. Topics will include bag-of-words, English syntactic structures, part-of-speech tagging, parsing algorithms, anaphora/coreference resolution, word representations, deep learning, language models, and a brief introduction to current new models.
+[comment]: This course will provide an introduction to various techniques in natural language processing with a focus on practical use. Topics will include bag-of-words, English syntactic structures, part-of-speech tagging, parsing algorithms, anaphora/coreference resolution, word representations, deep learning, language models, and a brief introduction to current new models.
 
-The course will cover basic implementations in Python as well as APIs and tools for advanced text processing. There will be brief weekly assignments, a midterm exam, and a final project including a programming component, a written report, and a short presentation.
+[comment]: The course will cover basic implementations in Python as well as APIs and tools for advanced text processing. There will be brief weekly assignments, a midterm exam, and a final project including a programming component, a written report, and a short presentation.
 
-<br/>
+[comment]: <br/>
 
 ### Learning Objectives:
 - A solid understanding of the basics of natural language processing (NLP)
