--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -60,11 +60,7 @@ Semester term: Fall 2024
 -->
 
 ### Learning Objectives:
-- A solid understanding of the basics of natural language processing (NLP)
-- Hands-on implementation of basic algorithms in NLP
-- Familiarity with the challenges of NLP
-- Broadened ideas of how NLP affects the world
-- Exposure to current research
+This course aims to provide a solid understanding of the basics of natural language processing (NLP) and hands-on implementation of basic NLP algorithms. Students will gain familiarity with the challenges of NLP and broaden their understanding of how NLP impacts the world. Additionally, the course offers exposure to current research in the field.
 
 
 ### Resources
@@ -83,16 +79,15 @@ Semester term: Fall 2024
   - 10% Paper draft
   - 15% Presentation
   - 18% Final paper
-
+<!--
 Final grades will be assigned based on the overall percentage calculated using the weightings listed above (no curving). There is no absolute direct mapping to letter grades, but the minimum overall percentage required to obtain each letter grade will be no higher than the following: A (94%), A- (90%), B+ (87%), B (83%), B- (80%), C- (65%).
+-->
 
 ### Assignment submission and late days
 
-Assignments will be submitted on Canvas/Gradescope.
+Assignments will be submitted on Canvas/Gradescope and will be due by 11:59 PM on the specified deadline.
 
-Each student gets eight free, no-questions-asked late days for the term. We will keep track of your late days - you do not need to email us to use them. Each late day provides a penalty-free, additional 24-hours to submit the assignment.
-
-Only three late days may be used on any given assignment. Late days cannot be divided fractionally. Late days can only be used on individual homework assignments (not group projects, presentations, or exams).
+Three penalty-free late days will be granted without any excuse for any given assignment, excluding group projects, presentations, and exams. Late days cannot be divided fractionally and can be used for a maximum of three assignments. The penalty for a late assignment will be 25% per business day.
 
 ### Respect for diversity
 
