--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -14,12 +14,12 @@ h2, h3, h4, h5, h6 {margin: 0;}
 
 
 ### Northeastern University Khoury College of Computer Sciences
-Semester term: Fall 2024
 
-|Instructor:     |:| Mohammad Selim |
-| Email          |:| m.selim@northeastern.edu |
-| Lectures       |:| Thursdays 6pm - 9:20pm in room xxxx |
-| Office Hours   |:| TBD |
+**Semester term**: Fall 2024
+**Instructor   **: Mohammad Selim
+**Email        **: m.selim@northeastern.edu
+**Lectures     **: Thursdays 6pm - 9:20pm in room xxxx
+**Office Hours **: TBD
 
 
 ### TAs:
