--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -18,13 +18,13 @@ h2, h3, h4, h5, h6 {margin: 0;}
 **Semester term**: Fall 2024
 **Instructor   **: Mohammad Selim
 **Email        **: m.selim@northeastern.edu
-**Lectures     **: Thursdays 6pm - 9:20pm in room xxxx
-**Office Hours **: TBD
+**Lectures     **: Friday 9.30 am - 12:50 pm in room 1505
+**Office Hours **: Wednesday 5 pm-6 pm (MS Team) and Friday after lecture
 
 
 ### TAs:
-- XX (XX@northeastern.edu)
-   - Office Hours XX and XX on MS Teams
+- Ruijia Xiong (xiong.ru@northeastern.edu)
+   - Office Hours Monday XX am - XX am on MS Teams
 
      
 ### Schedule:
@@ -34,20 +34,19 @@ h2, h3, h4, h5, h6 {margin: 0;}
 
 | Date   | Topic                                                                                         | Slides | Assignment Due |
 |--------|-----------------------------------------------------------------------------------------------|--------|----------------|
-| Jan 12  | Introduction, Review Python and Machine Learning                                             | [Lecture 1 Slides](https://docs.google.com/presentation/d/1FaUufzhynEuVI9W4JWHx35RdXFWKSlr2hx7ARklsfhA/edit?usp=sharing) |                |
-| Jan 19 | Bag of Words, Tfidf, Naive Bayes                                                              | [Lecture 2 Slides](https://docs.google.com/presentation/d/1ygP9I2_tTsNnWsElZGopArMcWwk0FNh-F4E5x2PM0so/edit?usp=sharing) | [Assignment 1 (setup)](https://docs.google.com/document/d/1YaN7B-1CaPwAk7X-gqNgtAd3JQMdIvJo9SUiFIdgpek/edit?usp=sharing) |
-| Jan 26 | Classification continued, feature engineering | [Lecture 3 Slides](https://docs.google.com/presentation/d/1gv1lhHflVSIcmTn0UcoyJii1BHG4uCDNw0rmBEb2m4c/edit?usp=sharing) |  |
-| Feb 2 | English Syntactic Structures and Part-of-Speech Tagging | [Lecture 4 Slides](https://docs.google.com/presentation/d/1h1NowEkxk4xxANK2uW7pDv40Cf38IXSML4ouM9jGdgE/edit?usp=sharing) | [Assignment 2 (classifying text)](https://docs.google.com/document/d/1Ryj6umrzfOFC4xCoSG8wLvmo1CxWetb4LAF8R9xJ5Zk/edit?usp=sharing), <br/> [Statement of project interest](https://docs.google.com/document/d/1qe6uiXbJRvUv1WxvN_YH1PHN7yPMu5hcos9N6x7s_cc/edit?usp=sharing) |
-| Feb 9  | Constituency and Dependency Parsing                                                           | [Lecture 5 Slides](https://docs.google.com/presentation/d/1OcVSgrmvdYc0A92_nONlEPJ3L6yvF60PEzmQgOogYpQ/edit?usp=sharing) | [Assignment 3 (constituency grammars)](https://docs.google.com/document/d/1b35nRzO2FKA_SS6GIOB5pTdPbyZWGTQuxVliHGV7MTw/edit?usp=sharing) |
-| Feb 16 | Coreference Resolution, Unsupervised Learning                                                                       | [Lecture 6 Slides](https://docs.google.com/presentation/d/1B1Hjn4sbhJ3NTRyakATAAb4BlsQXnhvWJGCD6EHoMX0/edit?usp=sharing) | [Assignment 4 (HMM and POS tagging)](https://docs.google.com/document/d/12AexcnY5aV2HxyBvRYSwP9Rso1ARD3DtjzBG-aSt800/edit?usp=sharing) |
-| Feb 23 | Word Representations, Neural Networks, Discuss practice midterm exam  | [Lecture 7 Slides](https://docs.google.com/presentation/d/19_rUJRMAvbUBqcBlMB-Je3PAU4cvaSgQP8LTREP-ycU/edit?usp=sharing) | [Project proposal](https://docs.google.com/document/d/1qe6uiXbJRvUv1WxvN_YH1PHN7yPMu5hcos9N6x7s_cc/edit?usp=sharing), <br> [Practice midterm (recommended)](https://docs.google.com/document/d/1Y8DGAMfTjfoL7MD_TFI1I1UdW_7qdEsoUh1zf3543J8/edit?usp=sharing) |
-| Mar 2 | Deep Learning and Language Models | [Lecture 8 Slides](https://docs.google.com/presentation/d/1HD3QLKqRIiHSrHlJqde1z4nYgVm4tMRjIqyG-nw8mFk/edit?usp=sharing) | [Assignment 5 (Parsing)](https://docs.google.com/document/d/19Q4wAG8rriAOwXS3H08Dt1ieEv3jt3H__Tt-7HUppEg/edit?usp=sharing) |
-| Mar 16  | **Midterm Exam** |  | The midterm exam <br> (instructions on Canvas) |
-| Mar 23  | Transformers, Pretrained Language Models, Finetuning, Commonly used Python tools | [Lecture 9 Slides](https://docs.google.com/presentation/d/1X_8gHpYO2qe3uSZw22Wma6-Lwrox4GHQss9rIjyyAIs/edit?usp=sharing) | [Assignment 6 (Unsupervised learning)](https://docs.google.com/document/d/1bC8dBhJufAvZCVnwDtXI_dhYxsH-Q6Scp1AKsJBpfGA/edit?usp=sharing) |
-| Mar 30 | GPT | [Lecture 10 Slides](https://docs.google.com/presentation/d/10ctUqlLz7Z1sLInXuDF-OBAFrYc5ybtvsbt74WeM97A/edit?usp=sharing) | [Paper draft due](https://docs.google.com/document/d/1qe6uiXbJRvUv1WxvN_YH1PHN7yPMu5hcos9N6x7s_cc/edit?usp=sharing) |
-| Apr 6 | Reinforcement learning, ChatGPT, ethical data science  | [Lecture 11 Slides](https://docs.google.com/presentation/d/1tRBlLRHdDn521wYyLsCDAIjDsTerC_m71FdP-4DAkzk/edit?usp=sharing) | [Assignment 7 (BERT)](https://docs.google.com/document/d/1NaiioGhlOxTUVg17Sl4V7UyT4OAkYRXBlbHgnfchuus/edit?usp=sharing) |
-| Apr 13 | Selected Topics chosen by students: speech recognition, knowledge graphs, web search engines (+ TextRank), chat / dialogue | [Lecture 12 Slides](https://docs.google.com/presentation/d/1bX4Zrew793Uif3fFxqUjErRsEaCjKCGEiSeVedUpWxI/edit?usp=sharing) | [Assignment 8 (GPT)](https://docs.google.com/document/d/1TvZ_Yjbx_-w_1V6mC2aXYCqRxBwPcCrTT_li7UzfHe0/edit?usp=sharing) |
-| Apr 20  | **Final Project Presentations** |  | [Final paper due](https://docs.google.com/document/d/1qe6uiXbJRvUv1WxvN_YH1PHN7yPMu5hcos9N6x7s_cc/edit?usp=sharing) |
+| Sep 06  | Introduction, Review Python and Machine Learning                                             | |                |
+| Sep 13  | Bag of Words, Tfidf, Naive Bayes                                                              | | Assignment 1 |
+| Sep 20  | Classification continued, feature engineering |  |  |
+| Sep 27  | English Syntactic Structures and Part-of-Speech Tagging | | Assignment 2 , <br/> Statement of project interest |
+| OCT 04  | Constituency and Dependency Parsing                                                           | | Assignment 3  |
+| OCT 11  | Coreference Resolution, Unsupervised Learning                                                                       | | Assignment 4 |
+| OCT 18 | Word Representations, Neural Networks, Discuss practice midterm exam  | | Project proposal, <br> Practice midterm (recommended) |
+| OCT 25 | Deep Learning and Language Models | | Assignment 5 |
+| NOV 01  | **Midterm Exam** |  | The midterm exam  |
+| NOV 08  | Transformers, Pretrained Language Models, Finetuning, Commonly used Python tools |  | Assignment 6  |
+| NOV 15 | GPT | |  |
+| NOV 22 | Reinforcement learning, ChatGPT, ethical data science  | | Assignment 7  |
+| DEC 13  | **Final Project Presentations** |  | Final paper due|
 
 <!---
 [comment]: <br/>
