--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -15,11 +15,11 @@ h2, h3, h4, h5, h6 {margin: 0;}
 
 ### Northeastern University Khoury College of Computer Sciences
 
-**Semester term**: Fall 2024
-**Instructor   **: Mohammad Selim
-**Email        **: m.selim@northeastern.edu
-**Lectures     **: Friday 9.30 am - 12:50 pm in room 1505
-**Office Hours **: Wednesday 5 pm-6 pm (MS Team) and Friday after lecture
+**Semester term**: Fall 2024 <br/> 
+**Instructor   **: Mohammad Selim <br/> 
+**Email        **: m.selim@northeastern.edu <br/> 
+**Lectures     **: Friday 9.30 am - 12:50 pm in room 1505 <br/> 
+**Office Hours **: Wednesday 5 pm-6 pm (MS Team) and Friday after lecture <br/> 
 
 
 ### TAs:
