--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -24,7 +24,7 @@ h2, h3, h4, h5, h6 {margin: 0;}
 
 ### TAs:
 - Ruijia Xiong (xiong.ru@northeastern.edu)
-   - Office Hours Monday XX am - XX am on MS Teams
+   - Office Hours Monday 9 am - 10 am on MS Teams
 
      
 ### Schedule:
@@ -34,7 +34,7 @@ h2, h3, h4, h5, h6 {margin: 0;}
 
 | Date   | Topic                                                                                         | Slides | Assignment Due |
 |--------|-----------------------------------------------------------------------------------------------|--------|----------------|
-| Sep 06  | Introduction, Review Python and Machine Learning                                             | |                |
+| Sep 06  | Introduction, Review Python and Machine Learning                                             |  [Lecture 1](https://docs.google.com/presentation/d/1qVlDi81KZpN-JWZCUCZe9nEOgHRlTkDp/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|                |
 | Sep 13  | Bag of Words, Tfidf, Naive Bayes                                                              | | Assignment 1 |
 | Sep 20  | Classification continued, feature engineering |  |  |
 | Sep 27  | English Syntactic Structures and Part-of-Speech Tagging | | Assignment 2 , <br/> Statement of project interest |
