--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -63,7 +63,7 @@ This course aims to provide a solid understanding of the basics of natural langu
 
 
 ### Resources
-- Textbook: ["Speech and Language Processing" by Daniel Jurafsky and James H. Martin](https://web.stanford.edu/~jurafsky/slp3/)
+- Textbook: Speech and Language Processing” by Daniel Jurafsky and James H. Martin [Online](https://web.stanford.edu/~jurafsky/slp3/)
 - Lecture slides (and assignments) will be linked in the schedule above
 - Microsoft Teams will be used for virtual TA office hours, one-on-one meetings, and quick messaging
 - Canvas will be used to collect grades and send announcements
