--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -32,10 +32,10 @@ h2, h3, h4, h5, h6 {margin: 0;}
 <br/>
 
 
-| Date   | Topic                                                                                         | Slides | Assignment Due |
+| Date   | Topic                                                                                         | Slides/Reading | Assignment Due |
 |--------|-----------------------------------------------------------------------------------------------|--------|----------------|
 | Sep 06  | Introduction, Review Python and Machine Learning                                             |  [Lecture 1](https://docs.google.com/presentation/d/1qVlDi81KZpN-JWZCUCZe9nEOgHRlTkDp/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|     Assignment 1 availalbe on canvas           |
-| Sep 13  | Bag of Words, Tfidf, Naive Bayes                                                              | | Assignment 1 Due|
+| Sep 13  | N-gram Language Models, Naive Bayes                                                              | Ch3.1-3.4 & Ch4| Assignment 1 Due|
 | Sep 20  | Classification continued, feature engineering |  |  |
 | Sep 27  | English Syntactic Structures and Part-of-Speech Tagging | | Assignment 2 , <br/> Statement of project interest |
 | OCT 04  | Constituency and Dependency Parsing                                                           | | Assignment 3  |
