--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -82,6 +82,13 @@ This course aims to provide a solid understanding of the basics of natural langu
 Final grades will be assigned based on the overall percentage calculated using the weightings listed above (no curving). There is no absolute direct mapping to letter grades, but the minimum overall percentage required to obtain each letter grade will be no higher than the following: A (94%), A- (90%), B+ (87%), B (83%), B- (80%), C- (65%).
 -->
 
+### Project selection and guidelines
+You are allowed to select any senario/problem which you want to solve using NLP. The project will be evaluated based on the NLP point of view, not as a complete software package (e.g. how is your text processed, engineered, model developed, trained and evaluated?). Your NLP components need to be supported by literature. You can adopt any paper published in one of the top NLP venues including 
+   - [EMNLP](https://aclanthology.org/events/emnlp-2023/)
+   - [NAACL](https://aclanthology.org/events/naacl-2024/)
+   - [ACL](https://aclanthology.org/events/acl-2024/)
+
+
 ### Assignment submission and late days
 
 Assignments will be submitted on Canvas/Gradescope and will be due by 11:59 PM on the specified deadline.
