--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -37,9 +37,9 @@ h2, h3, h4, h5, h6 {margin: 0;}
 | Sep 06  | Introduction, Review Python and Machine Learning                                             |  [Lecture 1](https://docs.google.com/presentation/d/1qVlDi81KZpN-JWZCUCZe9nEOgHRlTkDp/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|     Assignment 1 availalbe on canvas           |
 | Sep 13  | N-gram Language Models, Naive Bayes                                                              | Ch3.1-3.4 & Ch4.1-4.8| Assignment 1 Due , Assignment 2 Out|
 | Sep 20  | Classification continued, feature engineering, <br/> Word Representations, Neural Networks | Ch.6 |   Assignment 2 &, <br/> Project concept proposal due|
-| Sep 27  | <br/> Word Representations (cont.) | | Assignment 3 Due|
+| Sep 27  | <br/> Word Representations (cont.) | [Slide](https://docs.google.com/presentation/d/1QuoOQXcAF812_ZI59ehgF9BzCVvIFK5w/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true) | Assignment 3 Due|
 | OCT 04  | Constituency and Dependency Parsing                                                           | |   |
-| OCT 11  | Coreference Resolution, Unsupervised Learning                                                                       | | Assignment 4 |
+| OCT 11  | Coreference Resolution, Unsupervised Learning                                                                       | | Assignment 4 due|
 | OCT 18 | Deep Learning and Language Models , Discuss practice midterm exam  | | Project proposal, <br> Practice midterm (recommended) |
 | OCT 25 | Deep Learning and Language Models (cont.)| | Assignment 5 |
 | NOV 01  | **Midterm Exam** |  | The midterm exam  |
