--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -34,18 +34,19 @@ h2, h3, h4, h5, h6 {margin: 0;}
 
 | Date   | Topic                                                                                         | Slides/Reading | Assignment Due |
 |--------|-----------------------------------------------------------------------------------------------|--------|----------------|
-| Sep 06  | Introduction, Review Python and Machine Learning                                             |  [Lecture 1](https://docs.google.com/presentation/d/1qVlDi81KZpN-JWZCUCZe9nEOgHRlTkDp/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|     Assignment 1 availalbe on canvas           |
+| Sep 06  | Introduction, Review Python and Machine Learning                                             |  [Lecture 1](https://docs.google.com/presentation/d/1qVlDi81KZpN-JWZCUCZe9nEOgHRlTkDp/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|     Assignment 1 available on canvas           |
 | Sep 13  | N-gram Language Models, Naive Bayes                                                              | Ch3.1-3.4 & Ch4.1-4.8| Assignment 1 Due , Assignment 2 Out|
 | Sep 20  | Classification continued, feature engineering, <br/> Word Representations, Neural Networks | Ch.6 |   Assignment 2 &, <br/> Project concept proposal due|
 | Sep 27  | <br/> Word Representations (cont.) | [Slide](https://docs.google.com/presentation/d/1QuoOQXcAF812_ZI59ehgF9BzCVvIFK5w/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true) | Assignment 3 Due|
-| OCT 04  | Deep Learning and Language Models  (RNN, LSTM)                                                         | |   |
-| OCT 11  | Deep Learning and Language Models (cont.)  (Transformer)                                               | | Assignment 4 due, <br/> Assignment 5 out|
-| OCT 18 |  Constituency and Dependency Parsing, Discuss practice midterm exam  | | Project proposal, <br> Practice midterm (recommended) |
-| OCT 25 | Coreference Resolution, Unsupervised Learning  | |  |
-| NOV 01  | **Midterm Exam** |  | The midterm exam  |
-| NOV 08  | Transformers, Pretrained Language Models, Finetuning, Commonly used Python tools |  | Assignment 6  |
+| OCT 04  | Deep Learning and Language Models  (RNN, LSTM)                                                         | [Slide](https://docs.google.com/presentation/d/1eyMPVrKNwTYC1Xdpw6x2O17YzDbj73JX/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|   |
+| OCT 11  | Deep Learning and Language Models (cont.)  (Attention & Transformer)                                               |  | Assignment 4 due |
+| OCT 18 |  Pretrained Language Models, Finetuning, Commonly used Python tools, Discuss practice midterm exam  | | Project proposal due |
+| OCT 25 | **Midterm Exam** |  | The midterm exam (Take home) |
+| NOV 01 | Coreference Resolution, Unsupervised Learning  | |  Assignment 5 due|
+
+| NOV 08  | Constituency and Dependency Parsing |  | Assignment 6 due |
 | NOV 15 | GPT | |  |
-| NOV 22 | Reinforcement learning, ChatGPT, ethical data science  | | Assignment 7  |
+| NOV 22 | LLM, Bias and Fairness in NLP  | | |
 | DEC 6  | **Final Project Presentations** |  | Final paper due|
 
 <!---
