--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -38,8 +38,8 @@ h2, h3, h4, h5, h6 {margin: 0;}
 | Sep 13  | N-gram Language Models, Naive Bayes                                                              | Ch3.1-3.4 & Ch4.1-4.8| Assignment 1 Due , Assignment 2 Out|
 | Sep 20  | Classification continued, feature engineering, <br/> Word Representations, Neural Networks | Ch.6 |   Assignment 2 &, <br/> Project concept proposal due|
 | Sep 27  | <br/> Word Representations (cont.) | [Slide](https://docs.google.com/presentation/d/1QuoOQXcAF812_ZI59ehgF9BzCVvIFK5w/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true) | Assignment 3 Due|
-| OCT 04  | Deep Learning and Language Models  (RNN, LSTM)                                                         | [Slide](https://docs.google.com/presentation/d/1eyMPVrKNwTYC1Xdpw6x2O17YzDbj73JX/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|   |
-| OCT 11  | Deep Learning and Language Models (cont.)  (Attention & Transformer)                                               |  | Assignment 4 due |
+| OCT 04  | Deep Learning and Language Models  (RNN, LSTM)                                                         | [Slide](https://docs.google.com/presentation/d/1eyMPVrKNwTYC1Xdpw6x2O17YzDbj73JX/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)| , <br/> [LSTM blog-post](https://colah.github.io/posts/2015-08-Understanding-LSTMs/)   |
+| OCT 11  | Deep Learning and Language Models (cont.)  (Attention & Transformer)                                               | [Attention is all you need](https://arxiv.org/pdf/1706.03762) <br/> [Alammar's Transformer blog-post]([https://colah.github.io/posts/2015-08-Understanding-LSTMs/](https://jalammar.github.io/illustrated-transformer/))  </br/>  [Alammar's Attention blog-post](https://jalammar.github.io/visualizing-neural-machine-translation-mechanics-of-seq2seq-models-with-attention/)  | Assignment 4 due |
 | OCT 18 |  Pretrained Language Models, Finetuning, Commonly used Python tools, Discuss practice midterm exam  | | Project proposal due |
 | OCT 25 | **Midterm Exam** |  | The midterm exam (Take home) |
 | NOV 01 | Coreference Resolution, Unsupervised Learning  | |  Assignment 5 due|
