--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -40,7 +40,7 @@ h2, h3, h4, h5, h6 {margin: 0;}
 | Sep 27  | <br/> Word Representations (cont.) | [Slide](https://docs.google.com/presentation/d/1QuoOQXcAF812_ZI59ehgF9BzCVvIFK5w/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true) | Assignment 3 Due|
 | OCT 04  | Deep Learning and Language Models  (RNN, LSTM)                                                         | [Slide](https://docs.google.com/presentation/d/1eyMPVrKNwTYC1Xdpw6x2O17YzDbj73JX/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true) <br/> [LSTM blog-post](https://colah.github.io/posts/2015-08-Understanding-LSTMs/)   | |
 | OCT 11  | Deep Learning and Language Models (cont.)  (Attention & Transformer)                                               | [Slide](https://docs.google.com/presentation/d/1SwEF2iyhOKQntgSV6zmPz9pSuT_uhEmT/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true) <br/> [Attention is all you need](https://arxiv.org/pdf/1706.03762) <br/> [Alammar's Transformer blog-post]([https://colah.github.io/posts/2015-08-Understanding-LSTMs/](https://jalammar.github.io/illustrated-transformer/))  <br/>  [Alammar's Attention blog-post](https://jalammar.github.io/visualizing-neural-machine-translation-mechanics-of-seq2seq-models-with-attention/)  | Assignment 4 due |
-| OCT 18 |  Pretrained Language Models, Finetuning, Commonly used Python tools, Discuss practice midterm exam  | [BERT Slide](https://nlp.stanford.edu/seminar/details/jdevlin.pdf) ,br /> [Huggingface Librery](https://github.com/huggingface/transformers) | Project proposal due |
+| OCT 18 |  Pretrained Language Models, Finetuning, Commonly used Python tools, Discuss practice midterm exam  | [BERT Slide](https://nlp.stanford.edu/seminar/details/jdevlin.pdf) ,<br /> [Huggingface Librery](https://github.com/huggingface/transformers) | Project proposal due |
 | OCT 25 | **Midterm Exam** |  | The midterm exam (Take home) |
 | NOV 01 | Coreference Resolution, Unsupervised Learning  | |  Assignment 5 due|
 | NOV 08  | Constituency and Dependency Parsing |  | Assignment 6 due |
