--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -42,10 +42,10 @@ h2, h3, h4, h5, h6 {margin: 0;}
 | OCT 11  | Deep Learning and Language Models (cont.)  (Attention & Transformer)                                               | [Slide](https://docs.google.com/presentation/d/1SwEF2iyhOKQntgSV6zmPz9pSuT_uhEmT/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true) <br/> [Attention is all you need](https://arxiv.org/pdf/1706.03762) <br/> [Alammar's Transformer blog-post]([https://colah.github.io/posts/2015-08-Understanding-LSTMs/](https://jalammar.github.io/illustrated-transformer/))  <br/>  [Alammar's Attention blog-post](https://jalammar.github.io/visualizing-neural-machine-translation-mechanics-of-seq2seq-models-with-attention/)  | Assignment 4 due |
 | OCT 18 |  Pretrained Language Models, Finetuning, Commonly used Python tools, Discuss practice midterm exam  | [BERT Slide](https://nlp.stanford.edu/seminar/details/jdevlin.pdf) ,<br /> [Huggingface Librery](https://github.com/huggingface/transformers) <br/> [Example](https://colab.research.google.com/drive/1iGT06A1D56N4oABoQMTmbEcN89ADRWvR?usp=sharing) | Project proposal due |
 | OCT 25 | **Midterm Exam** |  | The midterm exam (Take home) |
-| NOV 01 | Coreference Resolution, Unsupervised Learning  | |  Assignment 5 due|
-| NOV 08  | Constituency and Dependency Parsing |  | Assignment 6 due |
-| NOV 15 | GPT | |  |
-| NOV 22 | LLM, Bias and Fairness in NLP  | | |
+| NOV 01 | Coreference Resolution, Unsupervised Learning  | [Slide](https://docs.google.com/presentation/d/1qux7tfremukUtLC-htaXXV6F-hok4KLp/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|  Assignment 5 due|
+| NOV 08  | Constituency and Dependency Parsing |  |  |
+| NOV 15 | LLM, Bias and Fairness in NLP | |  |
+| NOV 22 | Final project Q&A  | | |
 | DEC 6  | **Final Project Presentations** |  | Final paper due|
 
 <!---
