--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -75,7 +75,7 @@ This course aims to provide a solid understanding of the basics of natural langu
 - 50%  Final project
   - 2%  Statement of interest
   - 5%  Proposal
-  - 10% Paper draft
+  - 10% Poster
   - 15% Presentation
   - 18% Final paper
 <!--
