--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -43,9 +43,9 @@ h2, h3, h4, h5, h6 {margin: 0;}
 | OCT 18 |  Pretrained Language Models, Finetuning, Commonly used Python tools, Discuss practice midterm exam  | [BERT Slide](https://nlp.stanford.edu/seminar/details/jdevlin.pdf) ,<br /> [Huggingface Librery](https://github.com/huggingface/transformers) <br/> [Example](https://colab.research.google.com/drive/1iGT06A1D56N4oABoQMTmbEcN89ADRWvR?usp=sharing) | Project proposal due |
 | OCT 25 | **Midterm Exam** |  | The midterm exam (Take home) |
 | NOV 01 | Coreference Resolution, Unsupervised Learning  | [Slide](https://docs.google.com/presentation/d/1qux7tfremukUtLC-htaXXV6F-hok4KLp/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|  Assignment 5 due|
-| NOV 08  | Constituency and Dependency Parsing |  |  |
+| NOV 08  | POS Tagging, Constituency and Dependency Parsing | [Slide](https://docs.google.com/presentation/d/1Lwh6cHxdc5bwZItJ-8oBP-xPPAanEAGG/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)  |  |
 | NOV 15 | LLM, Bias and Fairness in NLP | |  |
-| NOV 22 | Final project Q&A  | | |
+| NOV 22 | Application of NLP  | | |
 | DEC 6  | **Final Project Presentations** |  | Final paper due|
 
 <!---
