--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -46,7 +46,8 @@ h2, h3, h4, h5, h6 {margin: 0;}
 | NOV 08  | POS Tagging, Constituency and Dependency Parsing | [Slide](https://docs.google.com/presentation/d/1Lwh6cHxdc5bwZItJ-8oBP-xPPAanEAGG/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)  |  |
 | NOV 15 | LLM, RL, Bias and Fairness in NLP | [Slide](https://docs.google.com/presentation/d/1UszXKr7jF5sQhZjqcQBs0Ff7wYSJwP3q/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|  |
 | NOV 22 | Applications of NLP  | | |
-| DEC 6  | **Final Project Presentations** |  | Final paper due|
+| DEC 2  | **Final Project** |  | Poster due|
+| DEC 6  | **Final Project Presentation** |  | Final paper+code due|
 
 <!---
 [comment]: <br/>
@@ -76,7 +77,7 @@ This course aims to provide a solid understanding of the basics of natural langu
   - 2%  Statement of interest
   - 5%  Proposal
   - 10% Poster
-  - 15% Presentation
+  - 15% Presentation (Poster)
   - 18% Final paper
 <!--
 Final grades will be assigned based on the overall percentage calculated using the weightings listed above (no curving). There is no absolute direct mapping to letter grades, but the minimum overall percentage required to obtain each letter grade will be no higher than the following: A (94%), A- (90%), B+ (87%), B (83%), B- (80%), C- (65%).
