--- a/_teaching/nlp2024.md
+++ b/_teaching/nlp2024.md
@@ -45,7 +45,7 @@ h2, h3, h4, h5, h6 {margin: 0;}
 | NOV 01 | Coreference Resolution, Unsupervised Learning  | [Slide](https://docs.google.com/presentation/d/1qux7tfremukUtLC-htaXXV6F-hok4KLp/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|  Assignment 5 due|
 | NOV 08  | POS Tagging, Constituency and Dependency Parsing | [Slide](https://docs.google.com/presentation/d/1Lwh6cHxdc5bwZItJ-8oBP-xPPAanEAGG/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)  |  |
 | NOV 15 | LLM, RL, Bias and Fairness in NLP | [Slide](https://docs.google.com/presentation/d/1UszXKr7jF5sQhZjqcQBs0Ff7wYSJwP3q/edit?usp=sharing&ouid=115579883578265764099&rtpof=true&sd=true)|  |
-| NOV 22 | Applications of NLP  | | |
+| NOV 22 | Applications of NLP  (Dialogue System) | [Slide](https://web.stanford.edu/~jurafsky/slp3/slides/24_Dialogue_May_6_2021.pdf)| |
 | DEC 2  | **Final Project** |  | Poster due|
 | DEC 6  | **Final Project Presentation** |  | Final paper+code due|
 
